# Clarity

./: .gitignore  CHANGELOG  CHANGELOG.md  Clarity.code-workspace  MOST_RECENT_CHANGELOG  MOST_RECENT_CHANGELOG.md  README.md  TODO  autochangelog.py  autover.py  mypy.ini  nuitka-crash-report.xml  nuitka-fix.config.yml  plan-songDataAndProviderRefactor.prompt.md  plan-songDataProviderSplit.prompt.md  pyproject.toml  queueTester.py  requirements.txt  run.bat  run.py  search_results.json  song.json  sres.json  temp.py  tox.ini  version.txt
.;cache/: (27399499ad89dce2b478e6d140b3a9d0)cache_metadata.json
.;images_cache/: (27399499ad89dce2b478e6d140b3a9d0)cache_metadata.json
.;queueCache/: (27399499ad89dce2b478e6d140b3a9d0)cache_metadata.json
.;song_datastore/: (27399499ad89dce2b478e6d140b3a9d0)dataStore_metadata.json
.;test_cache/: (27399499ad89dce2b478e6d140b3a9d0)cache_metadata.json
.github/: copilot-instructions.md  copilot-instructions.md.old  copilot-instructions.md.old-1
.github/workflows/: main.yml
commit_hooks/: README.md  commit-msg  commit-msg.py  commit-msg.py.disabled  info.md  post-commit  post-commit.py  post-commit.py.disabled  version.txt
commit_hooks/legacy_versioning/: MOST_RECENT_CHANGELOG  autochangelog.py  autover.py  version_utils.py
intertube/: __init__.py  search.py  search_result.json  song.py  song_info_example.json  testing.py
legacy_versioning/: autover.py  version_utils.py
src/: AppUrl.py  globals.py  network.py  paths.py  universal.py  version.txt  workers.py
src/app/: Backend.py  Interactions.py  Interfaces.py  KImage.py  actions.py  baseModels.py  fonts.py  main.py  materialInterface.py  options.py  queue_.py
src/app/assets/: DEFAULTSETTINGS.json
src/app/html/pages/home/: index.html  styles.css  themer.js  themevars.css
src/app/pyutils/: __init__.py  convertTocover.py  downloadimage.py  roundimage.py
src/app/qml/: colorspaceexample.qml  main.qml
src/app/qml/colobjs/: ColImg.qml  ColRect.qml  ColText.qml
src/app/qml/components/: Button.qml  Checkbox.qml  Logo.qml  NotificationPopups.qml  ProgressBar.qml  RoundedImage.qml  SearchBar.qml  SongBar.qml
src/app/qml/components/base/: Album.qml  Song.qml
src/app/qml/components/pages/: HomePage.qml
src/app/qml/components/particles/: SideGlow.qml  TestParticle.qml
src/app/qml/components/text/: Default.qml  Header.qml  SectionHeader.qml  Small.qml  SubHeader.qml  Text.qml  Title.qml
src/app/qml/js/: utils.js
src/app/qml/pages/: album.qml  debug.qml  home.qml  nowplaying.qml  search.qml  settings.qml  texttest.qml
src/cacheManager/: __init__.py  cacheManager.py  dataStore.py
src/databaseInterface/: db.py  plan  schema.sql
src/discotube/: README  presence.py
src/innerdb/: external.py  internal.py
src/innertube/: __init__.py  album.py  player.py  queue.py  queue_facade.py  queue_manager.py  search.py  search_result.json  song.py  song_info_example.json  song_queue.py
src/innertube/examples/: playbackData (ytdlp).json  song ytmapi.json  song.json
src/innertube/globalModels/: __init__.py
src/innertube/models/: songListModel.py
src/innertube/song/: __init__.py  song.py
src/innertube/song/models/: __init__.py  playbackData.py  songData.py  songListModel.py
src/innertube/song/providers/: __init__.py  providerInterface.py  registry.py
src/innertube/song/providers/youtube/: constants.py  utils.py  youtube.py
src/lasttube/: README
src/misc/: cleanup.py  compiled.py  logHistoryManager.py  settings.py  version.py
src/misc/enumerations/: Album.py  Cache.py  Network.py  Queue.py  Search.py  Song.py  __init__.py
src/onyx/: onyx.py
src/playback/: FFPlayPlayer.py  MediaPlayerProtocol.py  MpvPlayer.py  QtMediaPlayer.py  VlcPlayer.py  player.py  queue.py  queuemanager.py
src/providerInterface/: __init__.py  album.py  search.py
src/providerInterface/examples/: album-bpm.json  album-dazzle.json
src/providerInterface/globalModels/: __init__.py  identifier.py
src/providerInterface/song/: song.py
src/providerInterface/song/models/: playbackData.py  songData.py  songListModel.py
src/providerInterface/song/providers/: providerInterface.py
src/providerInterface/song/providers/youtube/: utils.py  youtube.py
src/qt/: resources.py  resources.qrc
src/wintube/: winSMTC.py
tests/: cacheManagerTest.py
