[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
version = "0.34.1"
name = "Clarity"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
  "aiohappyeyeballs",
  "aiohttp",
  "aiosignal",
  "ansicon",
  "anyio",
  "argcomplete",
  "attrs",
  "blessed",
  "certifi",
  "cffi",
  "charset-normalizer",
  "click",
  "colorama",
  "frozenlist",
  "h11",
  "halo",
  "httpcore",
  "httpx",
  "idna",
  "importlib-resources",
  "jedi",
  "jinxed",
  "just_playback",
  "log-symbols",
  "lxml",
  "materialyoucolor",
  "multidict",
  "mypy",
  "mypy_extensions",
  "Nuitka",
  "ordered-set",
  "packaging",
  "parso",
  "pathspec",
  "pillow",
  "pip-review",
  "platformdirs",
  "propcache",
  "protobuf",
  "psutil",
  "pudb",
  "pycparser",
  "Pygments",
  "pypresence @ https://github.com/kaneryu/pypresence/archive/master.zip",
  "PySide6",
  "PySide6-stubs @ https://github.com/kaneryu/PySide6-stubs/archive/main.zip#sha256=b94c45b2cc3f07dcd808062e396f960fe5dfb8598a114b074ca0369631b17217",
  "PySide6_Addons",
  "PySide6_Essentials",
  "python-vlc",
  "requests",
  "shiboken6",
  "six",
  "sniffio",
  "spinners",
  "termcolor",
  "tinytag",
  "toml",
  "typing_extensions",
  "urllib3",
  "urwid",
  "urwid_readline",
  "userpath",
  "versions_kaneryu",
  "wcwidth",
  "windows-curses",
  "yarl",
  "yt-dlp",
  "ytmusicapi @ https://github.com/kaneryu/ytmusicapi/archive/main.zip#sha256=adb29ecbc951c912e62b195a2023d4ddb90106c80601c43c7d9932c7a0b5eae1",
  "zstandard",
]

[project.optional-dependencies]
# Austin family moved to test extra
test = [
  "austin-dist",
  "austin-python",
  "austin-tui",
  "austin-web",
]
