[project]
version = "0.47.3"
name = "Clarity"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
  "aiohappyeyeballs",
  "aiohttp",
  "aiosignal",
  "ansicon",
  "anyio",
  "argcomplete",
  "attrs",
  "blessed",
  "certifi",
  "cffi",
  "charset-normalizer",
  "click",
  "colorama",
  "frozenlist",
  "h11",
  "halo",
  "httpcore",
  "httpx",
  "idna",
  "importlib-resources",
  "jedi",
  "jinxed",
  "just_playback",
  "log-symbols",
  "lxml",
  "materialyoucolor",
  "multidict",
  "mypy",
  "mypy_extensions",
  "Nuitka",
  "ordered-set",
  "packaging",
  "parso",
  "pathspec",
  "pillow",
  "pip-review",
  "platformdirs",
  "propcache",
  "protobuf",
  "psutil",
  "pudb",
  "pycparser",
  "Pygments",
  "pypresence @ https://github.com/kaneryu/pypresence/archive/master.zip",
  "PySide6",
  "PySide6-stubs @ https://github.com/kaneryu/PySide6-stubs/archive/main.zip",
  "PySide6_Addons",
  "PySide6_Essentials",
  "python-vlc",
  "requests",
  "shiboken6",
  "six",
  "sniffio",
  "spinners",
  "termcolor",
  "tinytag",
  "toml",
  "typing_extensions",
  "urllib3",
  "urwid",
  "urwid_readline",
  "userpath",
  "versions_kaneryu",
  "wcwidth",
  "windows-curses",
  "yarl",
  "yt-dlp",
  "ytmusicapi @ https://github.com/kaneryu/ytmusicapi/archive/async-new.zip",
  "zstandard",
  "pyside6-live-coding",
  "python-qt-live-coding",
  "ffpyplayer",
  "python-mpv",
]

[project.optional-dependencies]
test = [
  "austin-dist",
  "austin-python",
  "austin-tui",
  "austin-web",
]
