[project]
version = "0.49.6"
name = "Clarity"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
  "aiohappyeyeballs",
  "aiohttp",
  "aiosignal",
  "ansicon",
  "anyio",
  "argcomplete",
  "attrs",
  "blessed",
  "certifi",
  "cffi",
  "charset-normalizer",
  "click",
  "colorama",
  "frozenlist",
  "h11",
  "halo",
  "httpcore",
  "httpx",
  "idna",
  "importlib-resources",
  "jedi",
  "jinxed",
  "just_playback",
  "log-symbols",
  "lxml",
  "materialyoucolor",
  "multidict",
  "mypy",
  "mypy_extensions",
  "Nuitka",
  "ordered-set",
  "packaging",
  "parso",
  "pathspec",
  "pillow",
  "pip-review",
  "platformdirs",
  "propcache",
  "protobuf",
  "psutil",
  "pudb",
  "pycparser",
  "Pygments",
  "pypresence @ https://github.com/kaneryu/pypresence/archive/master.zip",
  "PySide6",
  "PySide6-stubs @ https://github.com/kaneryu/PySide6-stubs/archive/main.zip",
  "PySide6_Addons",
  "PySide6_Essentials",
  "python-vlc",
  "requests",
  "shiboken6",
  "six",
  "sniffio",
  "spinners",
  "termcolor",
  "tinytag",
  "toml",
  "typing_extensions",
  "urllib3",
  "urwid",
  "urwid_readline",
  "userpath",
  "versions_kaneryu",
  "wcwidth",
  "windows-curses",
  "yarl",
  "yt-dlp",
  "ytmusicapi @ https://github.com/kaneryu/ytmusicapi/archive/async-new.zip",
  "zstandard",
  "pyside6-live-coding",
  "python-qt-live-coding",
  "ffpyplayer",
  "python-mpv",
]

[project.optional-dependencies]
test = [
  "austin-dist",
  "austin-python",
  "austin-tui",
  "austin-web",
]
release = [
  "python-semantic-release>=9.0.0",
]

# ============================================================================
# python-semantic-release Configuration
# ============================================================================

[tool.semantic_release]
# Version locations - PSR will update these files automatically
version_toml = [
    "pyproject.toml:project.version"
]
allow_zero_version = true

# For plain text version files and Nuitka comments, use build_command
build_command = "python -c \"import sys; from pathlib import Path; import re; version = '$NEW_VERSION'; Path('version.txt').write_text(version, encoding='utf-8'); Path('src/version.txt').write_text(version, encoding='utf-8'); run_py = Path('run.py'); content = run_py.read_text(encoding='utf-8'); content = re.sub(r'(# nuitka-project: --product-version=)[\\\\d.]+', rf'\\\\g<1>{version}', content); content = re.sub(r'(# nuitka-project: --file-version=)[\\\\d.]+', rf'\\\\g<1>{version}', content); run_py.write_text(content, encoding='utf-8'); print(f'Updated version to {version}')\""

# Commit message parser - using conventional commits
commit_parser = "conventional"

[tool.semantic_release.commit_parser_options]
# Commit types that trigger version bumps
allowed_tags = [
    "feat",
    "fix",
    "perf",
    "refactor",
    # "chore",
    "docs",
    "ci",
    "build",
    "test",
    # "style",
]

# Version bump mapping
minor_tags = ["feat"]
patch_tags = ["fix", "perf", "refactor"]

# Default bump level when no matching commits (0 = no bump)
default_bump_level = 0

# ============================================================================
# Branch Configuration
# ============================================================================

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.branches.dev]
match = "dev"
prerelease = true
prerelease_token = "dev"

# ============================================================================
# Changelog Configuration
# ============================================================================

[tool.semantic_release.changelog]
# Exclude certain commit patterns from appearing in changelog
exclude_commit_patterns = [
    '''chore(?:\([^)]*?\))?: (?!.*deps).*''',
    '''ci(?:\([^)]*?\))?: .+''',
    '''style(?:\([^)]*?\))?: .+''',
    '''test(?:\([^)]*?\))?: .+''',
    '''docs(?:\([^)]*?\))?: .+''',
    '''build\((?!deps\): .+)''',
    '''Merge .*''',
    '''WIP.*''',
]

[tool.semantic_release.changelog.environment]
block_start_string = "{%"
block_end_string = "%}"
variable_start_string = "{{"
variable_end_string = "}}"

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

# ============================================================================
# Remote VCS Configuration (GitHub)
# ============================================================================

[tool.semantic_release.remote]
type = "github"
token = { env = "GH_TOKEN" }

# ============================================================================
# Publishing Configuration
# ============================================================================

[tool.semantic_release.publish]
upload_to_vcs_release = true
upload_to_pypi = false
dist_glob_patterns = ["*.whl", "*.tar.gz"]

# ============================================================================
# Git Configuration
# ============================================================================

[tool.semantic_release.commit_author]
env = "GIT_COMMIT_AUTHOR"
default = "semantic-release <semantic-release>"

# Commit message template for version bump commits
commit_message = "chore(release): {version}\n\nAutomatically generated by python-semantic-release"

# Git tag format (v prefix)
tag_format = "v{version}"
